// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StoryCollectionHeroItem should match snapshot with className 1`] = `
<li
  className="class"
>
  <a
    className="css-xy0ws6-StyledLinkWrapper e1omscfa3"
    href="https://www.economist.com/the-economist-explains/2018/05/15/who-has-the-right-to-judge-americans"
  >
    <amp-img
      alt="About us"
      height={720}
      layout="responsive"
      src="https://www.economist.com/sites/default/files/20180512_BLP509.jpg"
      width={1280}
    />
    <div
      className="css-1aepw6l-StyledHeroItemTextContainer e1omscfa2"
    >
      <h3
        className="css-m4ovun-StyledHeader e10thz6k2"
      >
        <span
          className="css-jzz7eb-StyledSubHeadline-headlineStyles e10thz6k1"
        >
          The Economist explains
        </span>
        <span
          className="css-1xpn6sh-StyledHeadline-subHeadlineStyles e10thz6k0"
        >
          Who has the right to judge Americans?
        </span>
      </h3>
      <p
        className="css-1jkfpje-StyledDescription e1omscfa0"
      >
        A minor fraud case provokes a Supreme Court challenge to the expanding power of administrative agencies in government
      </p>
    </div>
  </a>
  <a
    className="e1omscfa1 css-1gtc8lk-StyledLink-StyledSectionLink-StyledSectionLink e1pwg3wv0"
    href="https://www.economist.com/help/about-us"
  >
    About us
    <span
      className={undefined}
    >
      <svg
        version="1.1"
        viewBox="0 0 48 48"
        x="0px"
        xmlSpace="preserve"
        xmlns="http://www.w3.org/2000/svg"
        y="0px"
      >
        <polygon
          points="17.6,14.8 20.4,12 32.4,24 20.4,36 17.6,33.2 26.7,24 	"
        />
      </svg>
    </span>
  </a>
</li>
`;

exports[`StoryCollectionHeroItem should match snapshot without className 1`] = `
<li
  className=""
>
  <a
    className="css-xy0ws6-StyledLinkWrapper e1omscfa3"
    href="https://www.economist.com/the-economist-explains/2018/05/15/who-has-the-right-to-judge-americans"
  >
    <amp-img
      alt="About us"
      height={720}
      layout="responsive"
      src="https://www.economist.com/sites/default/files/20180512_BLP509.jpg"
      width={1280}
    />
    <div
      className="css-1aepw6l-StyledHeroItemTextContainer e1omscfa2"
    >
      <h3
        className="css-m4ovun-StyledHeader e10thz6k2"
      >
        <span
          className="css-jzz7eb-StyledSubHeadline-headlineStyles e10thz6k1"
        >
          The Economist explains
        </span>
        <span
          className="css-1xpn6sh-StyledHeadline-subHeadlineStyles e10thz6k0"
        >
          Who has the right to judge Americans?
        </span>
      </h3>
      <p
        className="css-1jkfpje-StyledDescription e1omscfa0"
      >
        A minor fraud case provokes a Supreme Court challenge to the expanding power of administrative agencies in government
      </p>
    </div>
  </a>
  <a
    className="e1omscfa1 css-1gtc8lk-StyledLink-StyledSectionLink-StyledSectionLink e1pwg3wv0"
    href="https://www.economist.com/help/about-us"
  >
    About us
    <span
      className={undefined}
    >
      <svg
        version="1.1"
        viewBox="0 0 48 48"
        x="0px"
        xmlSpace="preserve"
        xmlns="http://www.w3.org/2000/svg"
        y="0px"
      >
        <polygon
          points="17.6,14.8 20.4,12 32.4,24 20.4,36 17.6,33.2 26.7,24 	"
        />
      </svg>
    </span>
  </a>
</li>
`;
